--- a/package.json
+++ b/package.json
@@ -19,13 +19,10 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.10.2",
-    "@config-plugins/react-native-webrtc": "^10.0.0",
     "@convex-dev/react-query": "^0.0.0-alpha.8",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
-    "@notifee/react-native": "^9.1.8",
-    "@op-engineering/op-sqlite": "^12.0.2",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
     "@react-native-community/netinfo": "11.4.1",
@@ -35,9 +32,8 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/react-native": "~6.10.0",
-    "@stream-io/react-native-webrtc": "^125.0.8",
-    "@stream-io/video-react-native-sdk": "^1.11.5",
     "@tanstack/react-query": "^5.74.11",
+    "axios": "^1.9.0",
     "conves": "^1.0.0",
     "convex": "^1.23.0",
     "date-fns": "^4.1.0",
@@ -81,12 +77,10 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.8.1",
-    "react-native-incall-manager": "^4.2.0",
     "react-native-ios-utilities": "^5.1.5",
     "react-native-keyboard-controller": "^1.17.1",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-quick-sqlite": "^8.2.7",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
@@ -97,7 +91,6 @@
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "sonner-native": "^0.19.0",
-    "stream-chat-expo": "^6.7.3",
     "use-debounce": "^10.0.4",
     "yup": "^1.6.1",
     "zeego": "^3.0.6",
