--- a/app.json
+++ b/app.json
@@ -26,6 +26,14 @@
         "android.permission.RECORD_AUDIO",
         "android.permission.SYSTEM_ALERT_WINDOW",
         "android.permission.WAKE_LOCK",
+        "android.permission.BLUETOOTH",
+        "android.permission.ACCESS_NETWORK_STATE",
+        "android.permission.CAMERA",
+        "android.permission.INTERNET",
+        "android.permission.MODIFY_AUDIO_SETTINGS",
+        "android.permission.RECORD_AUDIO",
+        "android.permission.SYSTEM_ALERT_WINDOW",
+        "android.permission.WAKE_LOCK",
         "android.permission.BLUETOOTH"
       ],
       "package": "com.diegodark.workcloud"
@@ -60,7 +68,6 @@
         {
           "android": {
             "minSdkVersion": 24,
-
             "compileSdkVersion": 35,
             "targetSdkVersion": 35,
             "buildToolsVersion": "35.0.0",
@@ -85,25 +92,12 @@
         "projectId": "c6f4d0db-820e-41f4-9840-49346d4a94af"
       }
     },
-    "doctor": {
-      "reactNativeDirectoryCheck": {
-        "exclude": [
-          "@likashefqet/react-native-image-zoom",
-          "react-native-incall-manager",
-          " @rneui/base",
-          "@rneui/themed",
-          "react-native-material-menu",
-          "react-native-quick-sqlite",
-          "react-native-responsive-fontsize",
 
-          "@convex-dev/react-query",
-
-          "conves",
-          "convex",
-          "react-native-dropdown-select-list",
-          "use-debounce"
-        ]
-      }
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/c6f4d0db-820e-41f4-9840-49346d4a94af"
     }
   }
 }
