--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@convex-dev/react-query": "^0.0.0-alpha.8",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
+    "@legendapp/list": "^1.0.15",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "8.2.0",
@@ -36,6 +37,7 @@
     "axios": "^1.9.0",
     "conves": "^1.0.0",
     "convex": "^1.23.0",
+    "convex-helpers": "^0.1.90",
     "date-fns": "^4.1.0",
     "expo": "~52.0.46",
     "expo-av": "~15.0.2",
@@ -94,6 +96,7 @@
     "use-debounce": "^10.0.4",
     "yup": "^1.6.1",
     "zeego": "^3.0.6",
+    "zod": "^3.25.51",
     "zustand": "^5.0.3"
   },
   "devDependencies": {
