refactor: improve error handling and code readability
- Remove unused `streamToken` from `useGetUserId` hook
- Enhance `ErrorComponent` to display specific error messages
- Add error handling for optional fields in Convex queries
- Update Android permissions in `app.json`
- Improve code formatting and readability across multiple files

--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-hook-form": "^7.56.1",
     "react-native": "0.76.9",
     "react-native-animatable": "^1.4.0",
+    "react-native-blob-util": "^0.22.2",
     "react-native-collapsible": "^1.6.2",
     "react-native-device-info": "^14.0.4",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -83,6 +84,8 @@
     "react-native-keyboard-controller": "^1.17.1",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-pdf": "^6.7.7",
+    "react-native-popup-menu": "^0.17.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-reanimated-carousel": "^4.0.2",
