--- a/package.json
+++ b/package.json
@@ -95,6 +95,7 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "react-number-format": "^5.4.4",
     "sonner-native": "^0.19.0",
     "use-debounce": "^10.0.4",
     "yup": "^1.6.1",
