--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "update:preview": "eas update --branch preview --message"
   },
   "jest": {
     "preset": "jest-expo"
@@ -35,11 +36,14 @@
     "@sentry/react-native": "~6.10.0",
     "@tanstack/react-query": "^5.74.11",
     "axios": "^1.9.0",
+    "better-auth": "^1.2.9",
+    "better-sqlite3": "^11.10.0",
     "conves": "^1.0.0",
     "convex": "^1.23.0",
     "convex-helpers": "^0.1.90",
     "date-fns": "^4.1.0",
     "expo": "~52.0.46",
+    "expo-auth-session": "~6.0.3",
     "expo-av": "~15.0.2",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.3",
@@ -66,6 +70,7 @@
     "expo-updates": "~0.27.4",
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.6",
+    "jose": "^6.0.11",
     "lucide-react-native": "^0.503.0",
     "react": "18.3.1",
     "react-content-loader": "^7.0.2",
@@ -73,6 +78,7 @@
     "react-hook-form": "^7.56.1",
     "react-native": "0.76.9",
     "react-native-animatable": "^1.4.0",
+    "react-native-appwrite": "^0.9.2",
     "react-native-blob-util": "^0.22.2",
     "react-native-collapsible": "^1.6.2",
     "react-native-device-info": "^14.0.4",
@@ -93,6 +99,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-svg": "15.8.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "react-number-format": "^5.4.4",
