--- a/package.json
+++ b/package.json
@@ -61,7 +61,6 @@
     "expo-linking": "~7.0.5",
     "expo-media-library": "~17.0.6",
     "expo-router": "~4.0.21",
-    "expo-secure-store": "~14.0.1",
     "expo-sharing": "~13.0.1",
     "expo-splash-screen": "~0.29.24",
     "expo-status-bar": "~2.0.1",
@@ -83,6 +82,7 @@
     "react-native-collapsible": "^1.6.2",
     "react-native-device-info": "^14.0.4",
     "react-native-dropdown-select-list": "^2.0.5",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.8.1",
@@ -90,7 +90,6 @@
     "react-native-keyboard-controller": "^1.17.1",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-pdf": "^6.7.7",
     "react-native-popup-menu": "^0.17.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
