--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.10.2",
+    "@config-plugins/react-native-webrtc": "^12.0.0",
     "@convex-dev/react-query": "^0.0.0-alpha.8",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
@@ -34,6 +35,8 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/react-native": "~6.10.0",
+    "@stream-io/react-native-webrtc": "^125.3.1",
+    "@stream-io/video-react-native-sdk": "^1.17.0",
     "@tanstack/react-query": "^5.74.11",
     "axios": "^1.9.0",
     "better-auth": "^1.2.9",
@@ -86,10 +89,12 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.8.1",
+    "react-native-incall-manager": "^4.2.1",
     "react-native-ios-utilities": "^5.1.5",
     "react-native-keyboard-controller": "^1.17.1",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^14.0.0-rc.1",
+    "react-native-permissions": "^5.4.1",
     "react-native-popup-menu": "^0.17.0",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
