feat: implement swipe to delete connections and improve UI components
refactor(auth): remove auth-related files and simplify layout components

perf(emoji-modal): enhance emoji picker with better tap handling and animations

style: update component styles and fix linting issues

fix(connection): add delete connection mutation and error handling

chore: update dependencies and package-lock.json

refactor(schema): update worker type definitions and query filters

feat(home): add swipeable delete functionality with confirmation dialog

refactor(chat): improve bubble rendering and link handling

build: update app.json configuration for static output

--- a/app.json
+++ b/app.json
@@ -30,7 +30,7 @@
     },
     "web": {
       "bundler": "metro",
-      "output": "server",
+      "output": "static",
       "favicon": "./assets/images/favicon.png",
       "babel": {
         "exclude": ["react-native-pdf"]
@@ -71,7 +71,7 @@
             "compileSdkVersion": 35,
             "targetSdkVersion": 35,
             "buildToolsVersion": "35.0.0",
-        
+
             "enableProguardInReleaseBuilds": true,
             "allowBackup": false,
             "enableShrinkResourcesInReleaseBuilds": true
