--- a/package.json
+++ b/package.json
@@ -27,15 +27,15 @@
     "@hookform/resolvers": "^5.1.1",
     "@legendapp/list": "^1.0.15",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "@react-native-community/datetimepicker": "8.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/netinfo": "11.4.1",
     "@react-native-menu/menu": "^1.2.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@sentry/react-native": "~6.10.0",
+    "@sentry/react-native": "~6.14.0",
     "@stream-io/react-native-webrtc": "^125.3.1",
     "@stream-io/video-react-native-sdk": "^1.17.0",
     "@tanstack/react-query": "^5.74.11",
@@ -46,40 +46,40 @@
     "convex": "^1.23.0",
     "convex-helpers": "^0.1.90",
     "date-fns": "^4.1.0",
-    "expo": "~52.0.46",
-    "expo-auth-session": "~6.0.3",
-    "expo-av": "~15.0.2",
-    "expo-blur": "~14.0.3",
-    "expo-build-properties": "~0.13.3",
-    "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.8",
-    "expo-crypto": "~14.0.2",
-    "expo-document-picker": "~13.0.3",
-    "expo-file-system": "~18.0.12",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-image": "~2.0.7",
-    "expo-image-manipulator": "~13.0.6",
-    "expo-image-picker": "~16.0.6",
-    "expo-linear-gradient": "~14.0.2",
-    "expo-linking": "~7.0.5",
-    "expo-media-library": "~17.0.6",
-    "expo-router": "~4.0.21",
-    "expo-sharing": "~13.0.1",
-    "expo-splash-screen": "~0.29.24",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-updates": "~0.27.4",
-    "expo-web-browser": "~14.0.2",
+    "expo": "^53.0.15",
+    "expo-auth-session": "~6.2.0",
+    "expo-av": "~15.1.7",
+    "expo-blur": "~14.1.5",
+    "expo-build-properties": "~0.14.8",
+    "expo-clipboard": "~7.1.5",
+    "expo-constants": "~17.1.6",
+    "expo-crypto": "~14.1.5",
+    "expo-document-picker": "~13.1.6",
+    "expo-file-system": "~18.1.11",
+    "expo-font": "~13.3.2",
+    "expo-haptics": "~14.1.4",
+    "expo-image": "~2.3.1",
+    "expo-image-manipulator": "~13.1.7",
+    "expo-image-picker": "~16.1.4",
+    "expo-linear-gradient": "~14.1.5",
+    "expo-linking": "~7.1.6",
+    "expo-media-library": "~17.1.7",
+    "expo-router": "~5.1.2",
+    "expo-sharing": "~13.1.5",
+    "expo-splash-screen": "~0.30.9",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.9",
+    "expo-updates": "~0.28.15",
+    "expo-web-browser": "~14.2.0",
     "formik": "^2.4.6",
     "jose": "^6.0.11",
     "lucide-react-native": "^0.503.0",
-    "react": "18.3.1",
+    "react": "19.0.0",
     "react-content-loader": "^7.0.2",
-    "react-dom": "18.3.1",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.56.1",
-    "react-native": "0.76.9",
+    "react-native": "0.79.4",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.9.2",
     "react-native-blob-util": "^0.22.2",
@@ -87,7 +87,7 @@
     "react-native-device-info": "^14.0.4",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.20.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-incall-manager": "^4.2.1",
@@ -98,15 +98,15 @@
     "react-native-permissions": "^5.4.1",
     "react-native-popup-menu": "^0.17.0",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~3.16.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "4.12.0",
-    "react-native-screens": "~4.4.0",
-    "react-native-svg": "15.8.0",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "react-number-format": "^5.4.4",
     "sonner-native": "^0.19.0",
     "use-debounce": "^10.0.4",
@@ -118,12 +118,12 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "eslint": "^8.57.0",
-    "eslint-config-expo": "~8.0.1",
+    "eslint-config-expo": "~9.2.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.8",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
