--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
     "expo-updates": "~0.28.15",
+    "expo-video": "^2.2.2",
     "expo-web-browser": "~14.2.0",
     "formik": "^2.4.6",
     "jose": "^6.0.11",
