--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "workcloud-2.0",
-  "main": "expo-router/entry",
+  "main": "index.js",
   "version": "1.0.0",
   "scripts": {
     "start": "expo start",
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@clerk/clerk-expo": "^2.10.2",
+    "@config-plugins/react-native-callkeep": "^11.0.0",
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@convex-dev/react-query": "^0.0.0-alpha.8",
     "@expo/vector-icons": "^14.0.2",
@@ -27,9 +28,12 @@
     "@hookform/resolvers": "^5.1.1",
     "@legendapp/list": "^1.0.15",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.4.1",
     "@react-native-community/netinfo": "11.4.1",
+    "@react-native-firebase/app": "^22.2.1",
+    "@react-native-firebase/messaging": "^22.2.1",
     "@react-native-menu/menu": "^1.2.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -84,6 +88,7 @@
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.9.2",
     "react-native-blob-util": "^0.22.2",
+    "react-native-callkeep": "^4.3.16",
     "react-native-collapsible": "^1.6.2",
     "react-native-device-info": "^14.0.4",
     "react-native-dropdown-select-list": "^2.0.5",
@@ -106,6 +111,7 @@
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-voip-push-notification": "^3.3.3",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-number-format": "^5.4.4",
