feat(notifications): implement push notification system with expo
Add push notification functionality using expo-notifications package
- Create notification context and provider
- Add push token registration and handling
- Update auth context to store push tokens
- Add new utility files for notification handling
- Update package.json with required dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -39,4 +39,7 @@ app-example
 ios
 /ios
 /android
-android
+test-notification-d20d7-firebase-adminsdk-1iwx3-a764da5c73android
+/test-notification-d20d7-firebase-adminsdk-1iwx3-a764da5c73
+
+google-services.json
