--- a/package.json
+++ b/package.json
@@ -56,8 +56,9 @@
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
     "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.6",
+    "expo-constants": "~17.1.7",
     "expo-crypto": "~14.1.5",
+    "expo-device": "~7.1.4",
     "expo-document-picker": "~13.1.6",
     "expo-file-system": "~18.1.11",
     "expo-font": "~13.3.2",
@@ -68,6 +69,7 @@
     "expo-linear-gradient": "~14.1.5",
     "expo-linking": "~7.1.6",
     "expo-media-library": "~17.1.7",
+    "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.2",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.9",
