Refactor Convex API and integrate authentication
- Removed unused user creation and update logic in http.ts.
- Updated imports to use relative paths in member.ts, message.ts, organisation.ts, processors.ts, request.ts, reviews.ts, servicePoints.ts, staff.ts, suggestions.ts, users.ts, worker.ts, and workspace.ts.
- Enhanced user fetching logic in users.ts to utilize authentication.
- Added Google authentication integration in auth.ts and created SignIn button component.
- Implemented background task for app updates in utils.ts.
- Updated package.json to include new dependencies for authentication and background tasks.
- Added TypeScript configuration for Convex functions.

--- a/app.json
+++ b/app.json
@@ -110,7 +110,9 @@
         }
       ],
       "expo-font",
-      "expo-web-browser"
+      "expo-web-browser",
+      "expo-background-task",
+      "expo-secure-store"
     ],
     "experiments": {
       "typedRoutes": true
