--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@auth/core": "0.37.0",
     "@clerk/clerk-expo": "^2.10.2",
     "@config-plugins/react-native-callkeep": "^11.0.0",
     "@config-plugins/react-native-webrtc": "^12.0.0",
+    "@convex-dev/auth": "^0.0.87",
     "@convex-dev/react-query": "^0.0.0-alpha.8",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
@@ -53,6 +55,7 @@
     "expo": "^53.0.15",
     "expo-auth-session": "~6.2.0",
     "expo-av": "~15.1.7",
+    "expo-background-task": "~0.2.8",
     "expo-blur": "~14.1.5",
     "expo-build-properties": "~0.14.8",
     "expo-clipboard": "~7.1.5",
@@ -71,11 +74,13 @@
     "expo-media-library": "~17.1.7",
     "expo-notifications": "~0.31.4",
     "expo-router": "~5.1.2",
+    "expo-secure-store": "~14.2.3",
     "expo-sharing": "~13.1.5",
     "expo-splash-screen": "~0.30.9",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
     "expo-system-ui": "~5.0.9",
+    "expo-task-manager": "~13.1.6",
     "expo-updates": "~0.28.15",
     "expo-video": "^2.2.2",
     "expo-web-browser": "~14.2.0",
