--- a/GoogleService-Info.plist
+++ b/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.diegodark.workcloud</string>
+	<string>com.workcloud.app</string>
 	<key>PROJECT_ID</key>
 	<string>test-notification-d20d7</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:730264280649:ios:c09d351ecb261fbcfda998</string>
+	<string>1:730264280649:ios:e1a088c9a0e71198fda998</string>
 </dict>
 </plist>
