--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@config-plugins/react-native-callkeep": "^11.0.0",
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@convex-dev/auth": "^0.0.87",
+    "@convex-dev/expo-push-notifications": "^0.2.5",
     "@convex-dev/react-query": "^0.0.0-alpha.8",
     "@expo/vector-icons": "^14.0.2",
     "@gorhom/bottom-sheet": "^5.1.2",
@@ -42,6 +43,7 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/react-native": "~6.14.0",
+    "@stream-io/noise-cancellation-react-native": "^0.2.1",
     "@stream-io/react-native-webrtc": "^125.3.1",
     "@stream-io/video-react-native-sdk": "^1.17.0",
     "@tanstack/react-query": "^5.74.11",
