--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
     "web": "expo start --web",
-    "update:preview": "eas update --branch preview --message"
+    "update:preview": "eas update --branch preview --message",
+    "update:prod": "eas update --branch production --message"
   },
   "jest": {
     "preset": "jest-expo"
@@ -43,7 +44,6 @@
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/react-native": "~6.14.0",
-    "@stream-io/noise-cancellation-react-native": "^0.2.1",
     "@stream-io/react-native-webrtc": "^125.3.1",
     "@stream-io/video-react-native-sdk": "^1.17.0",
     "@tanstack/react-query": "^5.74.11",
@@ -112,6 +112,7 @@
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-permissions": "^5.4.1",
     "react-native-popup-menu": "^0.17.0",
+    "react-native-purchases": "^9.2.2",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-reanimated-carousel": "^4.0.2",
