Make a lot of changes

--- a/.gitignore
+++ b/.gitignore
@@ -42,4 +42,5 @@ ios
 test-notification-d20d7-firebase-adminsdk-1iwx3-a764da5c73android
 /test-notification-d20d7-firebase-adminsdk-1iwx3-a764da5c73
 
-google-services.json
+/google-services.json
+/GoogleService-Info.plist
