--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@auth/core": "0.37.0",
+    "@better-auth/expo": "1.3.34",
     "@clerk/clerk-expo": "^2.10.2",
     "@config-plugins/react-native-callkeep": "^11.0.0",
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@convex-dev/auth": "^0.0.87",
+    "@convex-dev/better-auth": "^0.9.11",
     "@convex-dev/expo-push-notifications": "^0.2.5",
     "@convex-dev/polar": "^0.6.4",
     "@convex-dev/react-query": "^0.0.0-alpha.8",
@@ -53,10 +55,10 @@
     "@stream-io/video-react-native-sdk": "^1.17.0",
     "@tanstack/react-query": "^5.74.11",
     "axios": "^1.9.0",
-    "better-auth": "^1.2.9",
+    "better-auth": "1.3.34",
     "better-sqlite3": "^11.10.0",
     "conves": "^1.0.0",
-    "convex": "^1.23.0",
+    "convex": "^1.31.0",
     "convex-helpers": "^0.1.90",
     "date-fns": "^4.1.0",
     "expo": "53.0.20",
