--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@convex-dev/auth": "^0.0.87",
     "@convex-dev/better-auth": "^0.9.11",
+    "@convex-dev/eslint-plugin": "^1.1.1",
     "@convex-dev/expo-push-notifications": "^0.2.5",
     "@convex-dev/polar": "^0.6.4",
     "@convex-dev/react-query": "^0.0.0-alpha.8",
@@ -54,6 +55,7 @@
     "@stream-io/react-native-webrtc": "^125.3.1",
     "@stream-io/video-react-native-sdk": "^1.17.0",
     "@tanstack/react-query": "^5.74.11",
+    "@typescript-eslint/eslint-plugin": "^8.49.0",
     "axios": "^1.9.0",
     "better-auth": "1.3.34",
     "better-sqlite3": "^11.10.0",
