--- a/package.json
+++ b/package.json
@@ -21,137 +21,139 @@
   },
   "dependencies": {
     "@auth/core": "0.37.0",
-    "@clerk/clerk-expo": "^2.10.2",
+    "@clerk/clerk-expo": "^2.19.14",
     "@config-plugins/react-native-callkeep": "^11.0.0",
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@convex-dev/auth": "^0.0.87",
-    "@convex-dev/expo-push-notifications": "^0.2.5",
+    "@convex-dev/expo-push-notifications": "^0.2.6",
     "@convex-dev/polar": "^0.6.4",
-    "@convex-dev/react-query": "^0.0.0-alpha.8",
-    "@convex-dev/resend": "^0.1.10",
-    "@expo/vector-icons": "^14.0.2",
-    "@gorhom/bottom-sheet": "^5.1.2",
-    "@hookform/resolvers": "^5.1.1",
-    "@legendapp/list": "^1.0.15",
+    "@convex-dev/react-query": "^0.0.0-alpha.11",
+    "@convex-dev/resend": "^0.1.13",
+    "@expo/vector-icons": "^15.0.3",
+    "@gorhom/bottom-sheet": "^5.2.8",
+    "@hookform/resolvers": "^5.2.2",
+    "@legendapp/list": "^1.1.4",
     "@likashefqet/react-native-image-zoom": "^4.3.0",
     "@notifee/react-native": "^9.1.8",
-    "@polar-sh/sdk": "^0.40.2",
-    "@react-email/components": "^0.5.1",
-    "@react-email/render": "^1.2.1",
-    "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@polar-sh/sdk": "^0.40.3",
+    "@react-email/components": "^0.5.7",
+    "@react-email/render": "^1.4.0",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-community/datetimepicker": "8.4.4",
     "@react-native-community/netinfo": "11.4.1",
-    "@react-native-firebase/app": "^22.2.1",
-    "@react-native-firebase/messaging": "^22.2.1",
-    "@react-native-menu/menu": "^1.2.3",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
+    "@react-native-firebase/app": "^22.4.0",
+    "@react-native-firebase/messaging": "^22.4.0",
+    "@react-native-menu/menu": "^2.0.0",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/native": "^7.1.6",
     "@rneui/base": "^4.0.0-rc.8",
     "@rneui/themed": "^4.0.0-rc.8",
-    "@sentry/react-native": "~6.14.0",
-    "@stream-io/react-native-webrtc": "^125.3.1",
-    "@stream-io/video-react-native-sdk": "^1.17.0",
-    "@tanstack/react-query": "^5.74.11",
-    "axios": "^1.9.0",
-    "better-auth": "^1.2.9",
+    "@sentry/react-native": "~7.2.0",
+    "@stream-io/react-native-webrtc": "^125.4.5",
+    "@stream-io/video-react-native-sdk": "^1.26.5",
+    "@tanstack/react-query": "^5.90.13",
+    "axios": "^1.13.2",
+    "better-auth": "^1.4.9",
     "better-sqlite3": "^11.10.0",
-    "conves": "^1.0.0",
-    "convex": "^1.23.0",
-    "convex-helpers": "^0.1.90",
+    "convex": "^1.31.2",
+    "convex-helpers": "^0.1.108",
     "date-fns": "^4.1.0",
-    "expo": "53.0.20",
-    "expo-audio": "~0.4.9",
-    "expo-auth-session": "~6.2.1",
-    "expo-av": "~15.1.7",
-    "expo-background-task": "~0.2.8",
-    "expo-blur": "~14.1.5",
-    "expo-build-properties": "~0.14.8",
-    "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-crypto": "~14.1.5",
-    "expo-dev-client": "~5.2.4",
-    "expo-device": "~7.1.4",
-    "expo-document-picker": "~13.1.6",
-    "expo-file-system": "~18.1.11",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-image": "~2.4.0",
-    "expo-image-manipulator": "~13.1.7",
-    "expo-image-picker": "~16.1.4",
-    "expo-linear-gradient": "~14.1.5",
-    "expo-linking": "~7.1.7",
-    "expo-media-library": "~17.1.7",
-    "expo-notifications": "~0.31.4",
-    "expo-router": "~5.1.4",
-    "expo-secure-store": "~14.2.3",
-    "expo-sharing": "~13.1.5",
-    "expo-splash-screen": "~0.30.10",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "expo-task-manager": "~13.1.6",
-    "expo-updates": "~0.28.17",
-    "expo-video": "^2.2.2",
-    "expo-web-browser": "~14.2.0",
-    "formik": "^2.4.6",
-    "jose": "^6.0.11",
+    "expo": "54.0.30",
+    "expo-audio": "~1.1.1",
+    "expo-auth-session": "~7.0.10",
+    "expo-av": "~16.0.8",
+    "expo-background-task": "~1.0.10",
+    "expo-blur": "~15.0.8",
+    "expo-build-properties": "~1.0.10",
+    "expo-clipboard": "~8.0.8",
+    "expo-constants": "~18.0.12",
+    "expo-crypto": "~15.0.8",
+    "expo-dev-client": "~6.0.20",
+    "expo-device": "~8.0.10",
+    "expo-document-picker": "~14.0.8",
+    "expo-file-system": "~19.0.21",
+    "expo-font": "~14.0.10",
+    "expo-haptics": "~15.0.8",
+    "expo-image": "~3.0.11",
+    "expo-image-manipulator": "~14.0.8",
+    "expo-image-picker": "~17.0.10",
+    "expo-linear-gradient": "~15.0.8",
+    "expo-linking": "~8.0.11",
+    "expo-media-library": "~18.2.1",
+    "expo-notifications": "~0.32.15",
+    "expo-router": "~6.0.21",
+    "expo-secure-store": "~15.0.8",
+    "expo-sharing": "~14.0.8",
+    "expo-splash-screen": "~31.0.13",
+    "expo-status-bar": "~3.0.9",
+    "expo-symbols": "~1.0.8",
+    "expo-system-ui": "~6.0.9",
+    "expo-task-manager": "~14.0.9",
+    "expo-updates": "~29.0.15",
+    "expo-video": "~3.0.15",
+    "expo-web-browser": "~15.0.10",
+    "formik": "^2.4.9",
+    "jose": "^6.1.3",
     "lucide-react-native": "^0.503.0",
-    "react": "19.0.0",
-    "react-content-loader": "^7.0.2",
-    "react-dom": "19.0.0",
-    "react-email": "^4.2.8",
-    "react-hook-form": "^7.56.1",
-    "react-native": "0.79.5",
+    "react": "19.1.0",
+    "react-content-loader": "^7.1.1",
+    "react-dom": "19.1.0",
+    "react-email": "^4.3.2",
+    "react-hook-form": "^7.69.0",
+    "react-native": "0.81.5",
     "react-native-animatable": "^1.4.0",
     "react-native-appwrite": "^0.9.2",
     "react-native-blob-util": "^0.22.2",
     "react-native-callkeep": "^4.3.16",
     "react-native-collapsible": "^1.6.2",
     "react-native-currency-input": "^1.1.1",
-    "react-native-device-info": "^14.0.4",
+    "react-native-device-info": "^14.1.1",
     "react-native-dropdown-select-list": "^2.0.5",
     "react-native-fs": "^2.20.0",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-incall-manager": "^4.2.1",
-    "react-native-ios-utilities": "^5.1.5",
-    "react-native-keyboard-controller": "^1.18.5",
+    "react-native-ios-utilities": "^5.2.0",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-material-menu": "^2.0.0",
     "react-native-modal": "^14.0.0-rc.1",
-    "react-native-permissions": "^5.4.1",
+    "react-native-permissions": "^5.4.4",
     "react-native-popup-menu": "^0.17.0",
-    "react-native-purchases": "^9.2.2",
+    "react-native-purchases": "^9.6.12",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-reanimated": "~4.1.1",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-responsive-fontsize": "^0.5.1",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.11.2",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-voip-push-notification": "^3.3.3",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-web": "^0.21.0",
+    "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.7.1",
     "react-number-format": "^5.4.4",
-    "sonner-native": "^0.19.0",
-    "use-debounce": "^10.0.4",
-    "yup": "^1.6.1",
+    "sonner-native": "^0.19.1",
+    "stream-chat-expo": "^8.12.0",
+    "use-debounce": "^10.0.6",
+    "yup": "^1.7.1",
     "zeego": "^3.0.6",
-    "zod": "^3.25.51",
-    "zustand": "^5.0.3"
+    "zod": "^3.25.76",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~19.0.10",
-    "@types/react-test-renderer": "^18.3.0",
-    "eslint": "^8.57.0",
-    "eslint-config-expo": "~9.2.0",
-    "jest": "^29.2.1",
-    "jest-expo": "~53.0.9",
+    "@babel/core": "^7.28.5",
+    "@convex-dev/eslint-plugin": "^1.1.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~19.1.10",
+    "@types/react-test-renderer": "^18.3.1",
+    "eslint": "^8.57.1",
+    "eslint-config-expo": "~10.0.0",
+    "jest": "^29.7.0",
+    "jest-expo": "~54.0.16",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.9.3"
   },
   "private": true
 }
