feat(auth): migrate to better-auth with enhanced authentication flow
- Replace convex-auth with better-auth implementation
- Add better-auth schema and configuration files
- Update auth provider and client components
- Modify user data handling and session management
- Implement new social sign-in flow
- Update related components to use new auth system
- Add better-auth dependencies and remove deprecated ones

--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
   },
   "dependencies": {
     "@auth/core": "0.37.0",
+    "@better-auth/expo": "^1.4.9",
     "@clerk/clerk-expo": "^2.19.14",
     "@config-plugins/react-native-callkeep": "^11.0.0",
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@convex-dev/auth": "^0.0.87",
+    "@convex-dev/better-auth": "^0.10.9",
     "@convex-dev/expo-push-notifications": "^0.2.6",
     "@convex-dev/polar": "^0.6.4",
     "@convex-dev/react-query": "^0.0.0-alpha.11",
@@ -80,6 +82,7 @@
     "expo-linear-gradient": "~15.0.8",
     "expo-linking": "~8.0.11",
     "expo-media-library": "~18.2.1",
+    "expo-network": "^8.0.8",
     "expo-notifications": "~0.32.15",
     "expo-router": "~6.0.21",
     "expo-secure-store": "~15.0.8",
@@ -114,6 +117,7 @@
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.8.1",
     "react-native-incall-manager": "^4.2.1",
+    "react-native-ios-context-menu": "^3.2.1",
     "react-native-ios-utilities": "^5.2.0",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-material-menu": "^2.0.0",
