--- a/eas.json
+++ b/eas.json
@@ -17,7 +17,7 @@
       "env": {
         "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_aHVnZS1nYXplbGxlLTI5LmNsZXJrLmFjY291bnRzLmRldiQ",
         "EXPO_PUBLIC_CONVEX_URL": "https://giddy-marten-642.convex.cloud",
-        "EXPO_PUBLIC_STREAM_API_KEY": "cnvc46pm8uq9",
+        "EXPO_PUBLIC_STREAM_API_KEY": "dg8u9pbbgghg",
         "EXPO_PUBLIC_API": "https://www.workcloud-backend.xyz"
       },
       "channel": "preview"
@@ -28,7 +28,7 @@
       "env": {
         "EXPO_PUBLIC_CONVEX_URL": "https://kindred-chihuahua-431.convex.cloud",
         "EXPO_PUBLIC_CLERK_PUBLISHABLE_KEY": "pk_test_aHVnZS1nYXplbGxlLTI5LmNsZXJrLmFjY291bnRzLmRldiQ",
-        "EXPO_PUBLIC_STREAM_API_KEY": "cnvc46pm8uq9"
+        "EXPO_PUBLIC_STREAM_API_KEY": "dg8u9pbbgghg"
       }
     }
   },
