--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
   "dependencies": {
     "@auth/core": "0.37.0",
     "@better-auth/expo": "^1.4.9",
-    "@clerk/clerk-expo": "^2.19.14",
     "@config-plugins/react-native-callkeep": "^12.0.0",
     "@config-plugins/react-native-webrtc": "^12.0.0",
     "@convex-dev/auth": "^0.0.87",
@@ -56,11 +55,11 @@
     "@tanstack/react-query": "^5.90.13",
     "axios": "^1.13.2",
     "better-auth": "^1.4.9",
-    "better-sqlite3": "^11.10.0",
     "convex": "^1.31.2",
     "convex-helpers": "^0.1.108",
     "date-fns": "^4.1.0",
-    "expo": "~54.0.32",
+    "expo": "~54.0.33",
+    "expo-asset": "~12.0.12",
     "expo-audio": "~1.1.1",
     "expo-auth-session": "~7.0.10",
     "expo-av": "~16.0.8",
@@ -84,7 +83,7 @@
     "expo-media-library": "~18.2.1",
     "expo-network": "^8.0.8",
     "expo-notifications": "~0.32.16",
-    "expo-router": "~6.0.22",
+    "expo-router": "~6.0.23",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.13",
@@ -95,7 +94,6 @@
     "expo-updates": "~29.0.16",
     "expo-video": "~3.0.15",
     "expo-web-browser": "~15.0.10",
-    "formik": "^2.4.9",
     "jose": "^6.1.3",
     "lucide-react-native": "^0.503.0",
     "react": "19.1.0",
@@ -104,15 +102,11 @@
     "react-email": "^4.3.2",
     "react-hook-form": "^7.69.0",
     "react-native": "0.81.5",
-    "react-native-animatable": "^1.4.0",
-    "react-native-appwrite": "^0.9.2",
-    "react-native-blob-util": "^0.22.2",
     "react-native-callkeep": "^4.3.16",
     "react-native-collapsible": "^1.6.2",
     "react-native-currency-input": "^1.1.1",
     "react-native-device-info": "^14.1.1",
     "react-native-dropdown-select-list": "^2.0.5",
-    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-get-random-values": "^1.11.0",
     "react-native-gifted-chat": "^2.8.1",
@@ -126,22 +120,20 @@
     "react-native-popup-menu": "^0.17.0",
     "react-native-purchases": "^9.6.12",
     "react-native-ratings": "^8.1.0",
-    "react-native-reanimated": "^4.2.1",
+    "react-native-reanimated": "~4.1.1",
     "react-native-reanimated-carousel": "^4.0.3",
     "react-native-responsive-fontsize": "^0.5.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
-    "react-native-url-polyfill": "^2.0.0",
     "react-native-voip-push-notification": "^3.3.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
-    "react-native-worklets": "^0.7.2",
+    "react-native-worklets": "0.5.1",
     "react-number-format": "^5.4.4",
     "sonner-native": "^0.19.1",
     "stream-chat-expo": "^8.12.0",
     "use-debounce": "^10.0.6",
-    "yup": "^1.7.1",
     "zeego": "^3.0.6",
     "zod": "^3.25.76",
     "zustand": "^5.0.9"
@@ -155,15 +147,9 @@
     "eslint": "^8.57.1",
     "eslint-config-expo": "~10.0.0",
     "jest": "^29.7.0",
-    "jest-expo": "~54.0.16",
+    "jest-expo": "~54.0.17",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.9.3"
   },
-  "private": true,
-  "resolutions": {
-    "react-native-reanimated": "^4.2.1"
-  },
-  "overrides": {
-    "react-native-reanimated": "^4.2.1"
-  }
+  "private": true
 }
